# Template-Clases

./: .gitignore  CMakeLists.txt  Cone.txt  Cylinder.txt  Has Member.cc  README.md  Rotation.txt
Algorithms/: CMakeLists.txt  JeJoAlgorithumsT.hpp  duplicates.hpp  main.cc
Binary Search/: CMakeLists.txt  TemplateClass BinarySearch.h  main_test.cc
Class/: Class.cbp  main.cpp
Class - BinarySearch/: Class - BinarySearch.cpp
Class - Dynamic Casting/: Class - Dynamic Casting.cpp
Class - Fractions/: Class - Fractions.cpp
Class - Geomatics/: Class - Geomatics.cpp
Class - Material/: Class - Material.cpp
Class - Shape/: Class - Shape.cpp
Class - StoreItems/: Class - StoreItems.cpp
Class - StoreItems - New/: Class - StoreItems - New.cpp
Class - Vector Extended/: Class - Vector Extended.cpp
Class Dynamic Casting/: CMakeLists.txt
Class Shape/: CMakeLists.txt
Class/include/: inTheWoods.h  player.h
Class/src/: inTheWoods.cpp  player.cpp
Class_StoreItems/: Class_StoreItems.cpp
Class__BinarySearch/: Class_BinarySearch.cpp
Class__Dynamic Casting/: Class_Dynamic Casting.cpp
Class__Dynamic_Casting/: CMakeLists.txt
Class__Geomatics/: Class_Geomatics.cpp
Class__Material/: Class_Material.cpp
Class__Shape/: Class_Shape.cpp
Class__StoreItems - New/: Class - StoreItems - New.cpp
Fractions/: CMakeLists.txt  FractionT.h  FractionsT.h  TemplateClass_Fractions.h  main_test.cc
JeJoAlgorithums/: CMakeLists.txt  JeJoAlgorithumsT.hpp  main.cc
JeJoProjects/: BinarySearchT.hpp  CMakeLists.txt  ForwardCountingIterator.hpp  FractionT.hpp  GenericVectorT.hpp  LockClassesT.hpp  PairExtendedT.hpp  ShapeT.hpp  SignalsLiteT.hpp  SignalsT.hpp  SlotT.hpp  StorageT.hpp  VectorExtendedT.hpp  main.cc
JeJoTemplateClasses/: BinarySearchT.hpp  CMakeLists.txt  CountingRangeT.hpp  ForwardCountingIterator.hpp  FractionT.hpp  Matrix2DT.hpp  PairExtendedT.hpp  SignalsT.hpp  StorageT.hpp  TestFunctions.cc  TestFunctions.hpp  Vector1DAs2DT.hpp  VectorExtendedT.hpp  main.cc
JeJoTraits_and_SFINE/: CMakeLists.txt  SFINAE.hpp  TemplateFunctions.hpp  TestFunctions.cc  TestFunctions.hpp  Traits.hpp  main.cc
Pair Extended/: CMakeLists.txt  TemplateClass__PairExt.h  main_test.cc
SFINAE/: CMakeLists.txt  SFINAE.hpp  main.cc
Template - count_adjacent_if/: Template - count_adjacent_if (Algorithm).cpp
Template Extra Algorithms/: CMakeLists.txt  count_adjacent_if.h  get_adjacent_pairs_if.h  main_test.cc
Template SFINAE/: CMakeLists.txt  SFINAE.h  main_test.cc
TemplateClass -VectorExt/: TemplateClass -VectorExt.cpp
TemplateClass_VectorExt/: CMakeLists.txt  TemplateClass_VectorExt.cpp
TemplateClass__BinarySearch/: CMakeLists.txt  TemplateClass_BinarySearch.h
TemplateClass__Fractions/: CMakeLists.txt
TemplateClass__PairExt/: CMakeLists.txt  main_test.cc
TemplateClass__VectorExt/: CMakeLists.txt  TemplateClass_VectorExt.h
Template_Extra_Algorithms/: CMakeLists.txt
Template_SFINAE/: CMakeLists.txt
Template__Extra_Algorithms/: CMakeLists.txt  Main_Tests.cc  Template_count_adjacent_if.h  Template_duplicates.h  Template_get_adjacent_pairs_if.h  main_test.cc
Template__SFINAE/: CMakeLists.txt  Templates_SFINAE.cpp  Templates_SFINAE.h  main_test.cc
Templates - SFINAE/: Templates - SFINAE.cpp
Templates - SFINAE - Basic/: Templates - SFINAE - Basic.cpp
Templates - inner_product/: Templates - inner_product.cpp
Traits&SFINE/: SFINAE.hpp  TemplateFunctions.hpp  Traits.hpp  main.cc
Vector Extended/: CMakeLists.txt  VectorExtendedT.h  main_test.cc
